<resources>
    <string name="app_name">Ejemplo04</string>
    <string name="name_nestor">Néstor Aldana</string>
    <string name="grade_nestor">Lic. en Ciencias de la Computación</string>
    <string name="text_email">Email</string>
    <string name="hint_text_your_email">Your email</string>
    <string name="hint_text_message">Write what you need</string>
    <string name="text_message">Message</string>
    <string name="text_contact">Contact</string>
</resources>
